--- a/local-weather.css
+++ b/local-weather.css
@@ -76,7 +76,7 @@ body {
      height: 50%;
      width: 50%;
      top: 25%; left: 25%; bottom: 25%; right: 25%;
-     font-size: px;
+     font-size: 20px;
   }
 }
 .content-area {
